--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/addStudentFragment"
+        android:id="@+id/addNewPostFragment"
         android:icon="@android:drawable/ic_input_add"
         android:title="Add"
         app:showAsAction="always" />
