--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -27,11 +27,20 @@
         android:id="@+id/addNewPostFragment"
         android:name="com.example.karenhub.AddNewPostFragment"
         android:label="Add Post"
-        tools:layout="@layout/fragment_add_post" />
+        tools:layout="@layout/fragment_add_post" >
+        <action
+            android:id="@+id/action_addNewPostFragment_to_mapsFragment"
+            app:destination="@id/mapsFragment" />
+    </fragment>
     <action android:id="@+id/action_global_addPostFragment" app:destination="@id/addNewPostFragment" />
     <fragment
         android:id="@+id/aboutFragment"
         android:name="com.example.karenhub.AboutFragment"
         android:label="About"
         tools:layout="@layout/fragment_about" />
+    <fragment
+        android:id="@+id/mapsFragment"
+        android:name="com.example.karenhub.MapsFragment"
+        android:label="fragment_maps"
+        tools:layout="@layout/fragment_maps" />
 </navigation>
