added location coordinates to add post fragment  and added a current user
I used binding method in order to  pass args between maps fragment and add new post fragment

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -31,6 +31,9 @@
         <action
             android:id="@+id/action_addNewPostFragment_to_mapsFragment"
             app:destination="@id/mapsFragment" />
+        <argument
+            android:name="Address1"
+            app:argType="com.google.android.gms.maps.model.LatLng" />
     </fragment>
     <action android:id="@+id/action_global_addPostFragment" app:destination="@id/addNewPostFragment" />
     <fragment
@@ -42,5 +45,12 @@
         android:id="@+id/mapsFragment"
         android:name="com.example.karenhub.MapsFragment"
         android:label="fragment_maps"
-        tools:layout="@layout/fragment_maps" />
+        tools:layout="@layout/fragment_maps" >
+        <argument
+            android:name="Address1"
+            app:argType="com.google.android.gms.maps.model.LatLng" />
+        <action
+            android:id="@+id/action_mapsFragment_to_addNewPostFragment"
+            app:destination="@id/addNewPostFragment" />
+    </fragment>
 </navigation>
