--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clickable="false"
     tools:context=".AddNewPostFragment">
 
     <ScrollView
@@ -24,12 +25,6 @@
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-
-                <ImageView
-                    android:id="@+id/imageView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@android:drawable/ic_dialog_map" />
 
                 <ImageView
                     android:id="@+id/avatarImg"
@@ -72,8 +67,7 @@
                     android:id="@+id/idEt"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="post title"
-                     />
+                    android:hint="post title" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -100,13 +94,16 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
+                android:clickable="false"
                 app:startIconDrawable="@drawable/ic_baseline_edit_calendar_24">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/address"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="address" />
+                    android:enabled="false"
+                    android:hint="address"
+                    android:textColor="#666666" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
