--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -10,14 +10,32 @@
         android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+    <LinearLayout
+        android:id="@+id/search_linear"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical">
     <androidx.appcompat.widget.SearchView
         android:id="@+id/idSearchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:background="#BFBFBF"
+        android:background="@drawable/roundstyle"
+        android:backgroundTint="#BFBFBF"
         android:elevation="5dp"
         app:iconifiedByDefault="false"
         app:queryHint="Search Here" />
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/current_loc_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:elevation="5dp"
+        android:background="@drawable/roundstyle"
+        android:text="@string/go_to_current_location"
+        />
+    </LinearLayout>
 
 </fragment>
