--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -10,6 +10,6 @@
     <item
         android:id="@+id/aboutFragment"
         android:icon="@drawable/ic_baseline_info_24"
-        android:title="about"
-        app:showAsAction="ifRoom" />
+        android:title="User Profile"
+        app:showAsAction="always" />
 </menu>
