--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -22,6 +22,9 @@
         <argument
             android:name="blueTitle"
             app:argType="string" />
+        <argument
+            android:name="postDetails"
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/addNewPostFragment"
