--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -82,6 +82,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/roundstyle"
                 android:backgroundTint="#DFDFDF"
+                android:cursorVisible="true"
+                android:inputType="textPassword"
                 android:hint="@string/prompt_password" />
         </com.google.android.material.textfield.TextInputLayout>
 
